# superpos-gemini-agent

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  install-agy.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/slim_agent_gemini/: __init__.py  __main__.py  config.py  gemini_executor.py  runtime_config.py
src/superpos_agent_gemini/: __init__.py  __main__.py  gemini_executor.py
tests/: test_executor.py  test_requirements.py  test_smoke.py
workspace/.gemini/modules/superpos-knowledge/: SKILL.md  module.yaml
workspace/.gemini/modules/superpos-knowledge/scripts/: superpos-knowledge
