[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slim-agent-gemini"
version = "0.1.0"
description = "Superpos slim agent backed by Google's Gemini CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Superpos" }]
dependencies = [
    "slim-agent-core",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
slim-agent-core = { path = "../slim-agent-core" }
